# asset-maintenance-system

./: README.md  package-lock.json  package.json  requirements.txt  requirments.txt
backend/: build.sh  db.sqlite3  manage.py  pyproject.toml  requirements.txt  vercel.json
backend/DanialSoftAMS/: asgi.py  settings.py  urls.py  wsgi.py
backend/ams/: admin.py  apps.py  models.py
backend/ams/api/: permissions.py  serializers.py  urls.py  views copy.py  views.py
backend/ams/migrations/: 0001_initial.py  0002_alter_category_cat_name_alter_option_opt_name.py  0002_alter_schedule_id.py  0002_remove_user_name.py  0003_alter_schedule_sched_name.py  0003_nationality_position_salary.py  0003_remove_transaction_trans_action.py  0004_alter_employee_emp_id.py  0004_remove_item_item_location_remove_item_item_onhand.py  0004_remove_transaction_trans_id_transaction_trans_code.py  0005_alter_warehouseitem_id.py  0005_remove_employee_emp_dayoff.py  0005_rename_trans_type_transaction_trans_action.py  0006_alter_warehouseitem_id.py  0006_item.py  0006_transaction_trans_status_and_more.py  0007_alter_item_item_id.py  0007_alter_warehouseitem_id.py  0007_rename_empid_user_userid.py  0008_alter_warehouseitem_id.py  0008_asset_delete_vehicle.py  0008_rename_item_id_item_item_code_and_more.py  0009_asset_asset_category.py  0009_category_measurement_alter_item_item_code_and_more.py  0009_remove_warehouse_warehouse_name.py  0010_alter_item_item_onhand_alter_item_item_reorder.py  0010_asset_asset_purchased.py  (+45 more)
backend/staticfiles/: staticfiles.json
backend/templates/: index.html
(+70 files in other folders)
